@@ -1,0 +1,5 @@
+if ${ocamlsrcdir}/tools/dumpobj.opt ${program} > ${output}; then
+  exit ${TEST_SUCC}
+else
+  exit ${TEST_FAIL}
+fi
